# flyonthewall

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  requirements.txt  serverless.yml
.github/workflows/: main.yml
fly_on_the_wall/: README.rst  alexa_client.py  customer.py  equity_client.py  exceptions.py  message_broker.py  pyproject.toml
fly_on_the_wall/lambda_handlers/: customer_handlers.py  fleetscan.py  notifications.py
fly_on_the_wall/tests/: test_equity_client.py  test_fly_on_the_wall.py
